--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-cli-app",
+  "name": "onebay-ui-custom-theme-with-vue-cli",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "onebay-ui": "^1.0.0-alpha.2",
     "vue": "^3.0.0"
   },
   "devDependencies": {
@@ -18,9 +19,13 @@
     "@vue/compiler-sfc": "^3.0.0",
     "@vue/eslint-config-prettier": "^6.0.0",
     "babel-eslint": "^10.1.0",
+    "babel-plugin-import": "^1.13.3",
+    "css-loader": "^5.1.2",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^7.0.0-0",
-    "prettier": "^1.19.1"
+    "prettier": "^1.19.1",
+    "sass": "^1.32.8",
+    "sass-loader": "10.1.1"
   }
 }
